tests/baselines/reference/numericIndexerConstraint.errors.txt
tests/cases/compiler/numericIndexerConstraint.ts(2,5): error TS2412: Property '0' of type 'number' is not assignable to numeric index type 'RegExp'.


==== tests/cases/compiler/numericIndexerConstraint.ts (1 errors) ====
    class C {
        0: number;
        ~
!!! error TS2412: Property '0' of type 'number' is not assignable to numeric index type 'RegExp'.
        [x: number]: RegExp;
    }